Changed all packages from org.lyora to com.sylvona, removes redundant dependencies from pom files